fix: flickering dark mode, close #295

--- a/assets/scss/pages/auth.scss
+++ b/assets/scss/pages/auth.scss
@@ -38,7 +38,7 @@ body {
     }
 }
 
-body.theme-dark {
+html.theme-dark {
     @import "../themes/dark/variables-dark";
     @debug $page-auth-right-bg;
 
