--- a/assets/scss/themes/dark/_root.scss
+++ b/assets/scss/themes/dark/_root.scss
@@ -1,4 +1,4 @@
-body.theme-dark {
+html.theme-dark {
     // Note: Custom variable values only support SassScript inside `#{}`.
   
     // Colors
