--- a/assets/scss/themes/dark/app-dark.scss
+++ b/assets/scss/themes/dark/app-dark.scss
@@ -6,7 +6,7 @@
 @import "node_modules/bootstrap/scss/mixins";
 @import "./root";
 
-body.theme-dark {
+html.theme-dark {
     // Bootstrap
     @import "node_modules/bootstrap/scss/maps";
     @import "node_modules/bootstrap/scss/utilities";
